Fix interstitial ui crashing when open in new tab.

BUG=609003

Review-Url: https://codereview.chromium.org/1955443002
Cr-Commit-Position: refs/heads/master@{#391880}

Former-commit-id: c518abf63a0fdc4b7288f8180997faf0fba0083d